fix scroll for modal. AG-34984
Squashed commit of the following:

commit 261be6fc067d47c1a08a565e21b4a8245b483a62
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Aug 7 17:05:03 2024 +0300

    fix scroll for modal

--- a/Extension/src/pages/options/styles/modal.pcss
+++ b/Extension/src/pages/options/styles/modal.pcss
@@ -53,8 +53,6 @@
         width: 100%;
         padding: 32px 32px 0;
         overflow-x: hidden;
-        overflow-y: scroll;
-        scrollbar-width: thin;
 
         background:
             /* shadow cover bottom */
@@ -72,6 +70,14 @@
         background-repeat: no-repeat;
         background-size: 100% 24px, 100% 16px;
         background-attachment: local, scroll;
+    }
+
+    &--scrollable {
+        /* show scrollbar only for scrollable content. AG-34984 */
+        & .modal__content {
+            overflow-y: scroll;
+            scrollbar-width: thin;
+        }
     }
 
     &__actions {
